--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 title: Enter Code to Pair Spotify
 description: visit spotify.com/pair to pair spotify on any of your device by following some simple steps.
+theme: Jekyll
