--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Enter Code to Pair Spotify
+title: Spotify.com/pair - Enter Code to Pair Spotify
 description: visit spotify.com/pair to pair spotify on any of your device by following some simple steps.
 theme: Jekyll
