--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Spotify.com/pair - Enter Code to Pair Spotify
-description: visit spotify.com/pair to pair spotify on any of your device by following some simple steps.
+description: <a href="https://spotifypaircodes.com/"><img src="/aks.png"alt="disneyplus.com/begin"/></a>
 theme:  jekyll-theme-cayman
