--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Spotify.com/pair - Enter Code to Pair Spotify
-description: <a href="https://spotifypaircodes.com/"><img src="/aks.png"alt="disneyplus.com/begin"/></a>
+description: <a href="https://spotifypaircodes.com/"><img src="/aks.png"alt="spotify.com/pair"/></a>
 theme:  jekyll-theme-cayman
